--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Heading 1 Heading 2 Heading 3 Heading 4 my link
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 Test GH Action
+Heading 2
 </div>
 <a href=/posts/test-gh-actions/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
